# mtg-organizer

./: .gitignore  Cargo.toml  README.md
notes/: user-stories.md
src/: lib.rs  main.rs
src/data_model/: card.rs  group.rs  mod.rs  oddities.rs
src/dbs/: folders.rs  mod.rs
src/dbs/allcards/: cardref_key.rs  db_layout.rs  mod.rs
src/dbs/indexes/: color_combination.rs  helpers.rs  mana_cost.rs  mod.rs  rarity_supertype.rs  stats.rs  string.rs  string_lpm.rs  string_trigram.rs
src/dbs/serialization/: mod.rs
src/query/: compile.rs  err_warn_support.rs  lex.rs  mod.rs  parse.rs  query.rs
