[package]
name = "project"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
nucleo-matcher = "0.3.1"
ratatui = "0.29.0"
minimal_storage = { git = "https://github.com/chlohal/tiny-maps.git" }
tree = { git = "https://github.com/chlohal/tiny-maps.git" }
serde_json = "1.0.145"

[[bin]]
name = "build_card_db"
path = "src/build_card_db.rs"
